--- a/src/styles/mian.css
+++ b/src/styles/mian.css
@@ -1,14 +1,47 @@
 :root {
-    --footer-bg-color: #F28C0F;
+    --footer-bg-color: #8C5535;
     --footer-height: 5vh;
     --dark-font-color: #424242;
     --bg-color: #D9C4B8;
+    --sidebar-color: #F28C0F;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: var(--dark-font-color);
     background-color: var(--bg-color);
+    height: calc(100vh - var(--footer-height));
+    margin: 0;
+}
+
+.sidebar {
+    width: 20vw;
+    height: 100%;
+    background-color: var(--sidebar-color);
+    display: grid;
+    grid-template-columns: 15vw 5vw;
+    grid-template-rows: 5rem;
+}
+
+.sidebar button {
+    height: 2rem;
+    margin: 1rem .5rem;
+}
+
+.menu-btn {
+    width: 4vw;
+}
+
+.project-container {
+    grid-column: 1 / 3;
+}
+
+.proj-name {
+    margin-left: 1rem;
+}
+
+.menu-img {
+    height: 1.5rem;
 }
 
 .footer-container {
