--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -26,7 +26,7 @@
 }
 
 .task-card {
-    width: 50%;
+    width: 35rem;
     border: .2rem solid #424242;
     border-radius: .5rem;
     box-sizing: border-box;
@@ -35,6 +35,7 @@
     -webkit-box-shadow: 0px 15px 1rem 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 15px 1rem 2px rgba(0,0,0,0.75);
     box-shadow: 0px 15px 1rem 2px rgba(0,0,0,0.75);
+    margin-bottom: 1rem;
 }
 
 .task-header {
