--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -6,7 +6,8 @@
 
 .content-container {
     padding: 1rem;
-    width: calc(100vw - var(--sidebar-width))
+    width: calc(100vw - var(--sidebar-width));
+    height: calc(100Vh - var(--footer-height));
 }
 
 .list-title {
