Modify overflow and box-sizing properties.

--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -5,10 +5,11 @@
 }
 
 .content-container {
+    box-sizing: border-box;
     padding: 1rem;
     width: calc(100vw - var(--sidebar-width));
     height: calc(100Vh - var(--footer-height));
-    overflow: scroll;
+    overflow: auto;
 }
 
 .list-title {
