--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -9,7 +9,8 @@
     padding: 1rem;
     width: calc(100vw - var(--sidebar-width));
     height: calc(100Vh - var(--footer-height));
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: none;
 }
 
 .list-title {
